Update DBLTR to new revision

--- a/ref.bib
+++ b/ref.bib
@@ -56,8 +56,8 @@
 }
 @misc{zendframework1,
 	title        = {{PHP Zend Framework 1}},
-	howpublished = {\url{https://github.com/zendframework/zf1}},
-	year         = 2018
+	year         = 2018,
+	howpublished = {\url{https://github.com/zendframework/zf1}}
 }
 @inproceedings{moura2008z3,
 	title        = {Z3: An efficient SMT solver},
@@ -69,48 +69,48 @@
 }
 @misc{llvmir,
 	title        = {{LLVM Intermediate Representation Language}},
-	howpublished = {\url{https://llvm.org/docs/LangRef.html}},
-	year         = 2022
+	year         = 2022,
+	howpublished = {\url{https://llvm.org/docs/LangRef.html}}
 }
 @misc{twentyfourteen_theme,
 	title        = {{WordPress Twenty Fourteen theme}},
-	howpublished = {\url{https://wordpress.org/themes/twentyfourteen/}},
-	year         = 2022
+	year         = 2022,
+	howpublished = {\url{https://wordpress.org/themes/twentyfourteen/}}
 }
 @misc{twentytwelve_theme,
 	title        = {{WordPress Twenty Twelve theme}},
-	howpublished = {\url{https://wordpress.org/themes/twentytwelve/}},
-	year         = 2022
+	year         = 2022,
+	howpublished = {\url{https://wordpress.org/themes/twentytwelve/}}
 }
 @misc{elastica,
 	title        = {{Elastica: Elasticsearch client}},
-	howpublished = {\url{https://github.com/ruflin/Elastica}},
-	year         = 2022
+	year         = 2022,
+	howpublished = {\url{https://github.com/ruflin/Elastica}}
 }
 @misc{less.php,
 	title        = {{less.js ported to PHP}},
-	howpublished = {\url{https://github.com/oyejorge/less.php}},
-	year         = 2022
+	year         = 2022,
+	howpublished = {\url{https://github.com/oyejorge/less.php}}
 }
 @misc{PHP_CodeSniffer,
 	title        = {{PHP\_CodeSniffer is a PHP package that tokenizes PHP, JavaScript and CSS files and detects violations of a defined set of coding standards}},
-	howpublished = {\url{https://github.com/squizlabs/PHP_CodeSniffer}},
-	year         = 2022
+	year         = 2022,
+	howpublished = {\url{https://github.com/squizlabs/PHP_CodeSniffer}}
 }
 @misc{Symfony,
 	title        = {{Symfony PHP framework}},
-	howpublished = {\url{https://github.com/symfony/symfony}},
-	year         = 2022
+	year         = 2022,
+	howpublished = {\url{https://github.com/symfony/symfony}}
 }
 @misc{Guzzle,
 	title        = {{Guzzle: PHP HTTP client}},
-	howpublished = {\url{https://github.com/guzzle/guzzle}},
-	year         = 2022
+	year         = 2022,
+	howpublished = {\url{https://github.com/guzzle/guzzle}}
 }
 @misc{PHPAutoload,
 	title        = {{PHP autoload built-in function}},
-	howpublished = {\url{http://php.net/manual/en/language.oop5.autoload.php}},
-	year         = 2022
+	year         = 2022,
+	howpublished = {\url{http://php.net/manual/en/language.oop5.autoload.php}}
 }
 @misc{sans-attacksurface,
 	title        = {{SANS Technology Institute: Security Laboratory: Defense In Depth Series}},
@@ -152,24 +152,24 @@
 @misc{xdebug-performance2,
 	title        = {{Code Coverage: The Present}},
 	author       = {Derick Rethans},
-	howpublished = {\url{https://derickrethans.nl/code-coverage.html}},
-	year         = 2022
+	year         = 2022,
+	howpublished = {\url{https://derickrethans.nl/code-coverage.html}}
 }
 @misc{xdebug-performance1,
 	title        = {{Xdebug's Code Coverage speedup}},
 	author       = {Derick Rethans},
-	howpublished = {\url{https://derickrethans.nl/xdebug-codecoverage-speedup.html}},
-	year         = 2022
+	year         = 2022,
+	howpublished = {\url{https://derickrethans.nl/xdebug-codecoverage-speedup.html}}
 }
 @misc{PHPWakeup,
 	title        = {{PHP wakeup built-in function}},
-	howpublished = {\url{http://php.net/manual/en/language.oop5.magic.php\#object.wakeup}},
-	year         = 2022
+	year         = 2022,
+	howpublished = {\url{http://php.net/manual/en/language.oop5.magic.php\#object.wakeup}}
 }
 @misc{POI,
 	title        = {{PHP Object Injection Vulnerability}},
-	howpublished = {\url{https://www.owasp.org/index.php/PHP\_Object\_Injection}},
-	year         = 2022
+	year         = 2022,
+	howpublished = {\url{https://www.owasp.org/index.php/PHP\_Object\_Injection}}
 }
 @inproceedings{Dahse:2014:CRA:2660267.2660363,
 	title        = {{Code Reuse Attacks in PHP: Automated POP Chain Generation}},
@@ -188,20 +188,20 @@
 }
 @misc{phpmyadmin,
 	title        = {{phpMyAdmin: MySQL web administration}},
+	year         = 2022,
 	key          = {php},
-	howpublished = {\url{https://phpmyadmin.net/}},
-	year         = 2022
+	howpublished = {\url{https://phpmyadmin.net/}}
 }
 @misc{autoappend,
 	title        = {{Automatically append or prepend files in a PHP script}},
-	howpublished = {\url{https://www.php.net/manual/en/ini.core.php#ini.auto-append-file}},
-	year         = 2022
+	year         = 2022,
+	howpublished = {\url{https://www.php.net/manual/en/ini.core.php#ini.auto-append-file}}
 }
 @misc{cvedetails,
 	title        = {{CVE Details: The ultimate security vulnerability datasource}},
+	year         = 2022,
 	howpublished = {\url{https://www.cvedetails.com/}},
-	key          = {CVE},
-	year         = 2022
+	key          = {CVE}
 }
 @article{koehler2004longitudinal,
 	title        = {{A longitudinal study of Web pages continued: a consideration of document persistence}},
@@ -213,61 +213,61 @@
 }
 @misc{nistgov,
 	title        = {{NIST: National Vulnerability Database}},
+	year         = 2022,
 	howpublished = {\url{https://nvd.nist.gov/}},
-	key          = {CVE},
-	year         = 2022
+	key          = {CVE}
 }
 @misc{mediawiki,
 	title        = {{MediaWiki: Free and Open Source Software Wiki}},
+	year         = 2022,
 	key          = {php},
-	howpublished = {\url{https://www.mediawiki.org/wiki/MediaWiki}},
-	year         = 2022
+	howpublished = {\url{https://www.mediawiki.org/wiki/MediaWiki}}
 }
 @misc{magento,
 	title        = {{Magento: eCommerce Platform}},
+	year         = 2022,
 	howpublished = {\url{https://magento.com/}},
-	key          = {php},
-	year         = 2022
+	key          = {php}
 }
 @misc{Metasploit,
 	title        = {{Metasploit Framework}},
-	howpublished = {\url{https://www.metasploit.com/}},
-	year         = 2022
+	year         = 2022,
+	howpublished = {\url{https://www.metasploit.com/}}
 }
 @misc{XDebug,
 	title        = {{XDebug Debugger and Profiler Tool for PHP}},
-	howpublished = {\url{https://xdebug.org/}},
-	year         = 2022
+	year         = 2022,
+	howpublished = {\url{https://xdebug.org/}}
 }
 @misc{phpdbg,
 	title        = {{phpdbg PHP Debugger}},
-	howpublished = {\url{https://github.com/krakjoe/phpdbg}},
-	year         = 2022
+	year         = 2022,
+	howpublished = {\url{https://github.com/krakjoe/phpdbg}}
 }
 @misc{xhprof,
 	title        = {{xhprof function-level hierarchical profiler for PHP}},
-	howpublished = {\url{https://github.com/phacility/xhprof}},
-	year         = 2015
+	year         = 2015,
+	howpublished = {\url{https://github.com/phacility/xhprof}}
 }
 @misc{gremlinsjs,
 	title        = {{gremlins.js}},
-	howpublished = {\url{https://github.com/marmelab/gremlins.js}},
-	year         = 2022
+	year         = 2022,
+	howpublished = {\url{https://github.com/marmelab/gremlins.js}}
 }
 @misc{greasemonkey,
 	title        = {{Greasemonkey}},
-	howpublished = {\url{https://www.greasespot.net/}},
-	year         = 2022
+	year         = 2022,
+	howpublished = {\url{https://www.greasespot.net/}}
 }
 @misc{burpsuite,
 	title        = {{Burp Suite web vulnerability scanner}},
-	howpublished = {\url{https://portswigger.net/burp}},
-	year         = 2022
+	year         = 2022,
+	howpublished = {\url{https://portswigger.net/burp}}
 }
 @misc{phpshutdown,
 	title        = {{PHP: register\_shutdown\_function - Manual}},
-	howpublished = {\url{https://secure.php.net/manual/function.register-shutdown-function.php}},
-	year         = 2022
+	year         = 2022,
+	howpublished = {\url{https://secure.php.net/manual/function.register-shutdown-function.php}}
 }
 @misc{nodeDownloads,
 	title        = {{The State of JavaScript Frameworks}},
@@ -325,23 +325,23 @@
 }
 @misc{xss,
 	title        = {{Cross-site Scripting (XSS) - OWASP}},
-	howpublished = {\url{https://www.owasp.org/index.php/Cross-site_Scripting_(XSS)}},
-	year         = 2022
+	year         = 2022,
+	howpublished = {\url{https://www.owasp.org/index.php/Cross-site_Scripting_(XSS)}}
 }
 @misc{csrf,
 	title        = {{Cross-Site Request Forgery (CSRF) - OWASP}},
-	howpublished = {\url{https://www.owasp.org/index.php/Cross-Site_Request_Forgery_(CSRF)}},
-	year         = 2022
+	year         = 2022,
+	howpublished = {\url{https://www.owasp.org/index.php/Cross-Site_Request_Forgery_(CSRF)}}
 }
 @misc{rce,
 	title        = {{Remote Code Execution Vulnerability | Netsparker}},
-	howpublished = {\url{https://www.netsparker.com/blog/web-security/remote-code-evaluation-execution/}},
-	year         = 2022
+	year         = 2022,
+	howpublished = {\url{https://www.netsparker.com/blog/web-security/remote-code-evaluation-execution/}}
 }
 @misc{sqlInjection,
 	title        = {{SQL Injection: OWASP}},
-	howpublished = {\url{https://www.owasp.org/index.php/SQL_Injection}},
-	year         = 2022
+	year         = 2022,
+	howpublished = {\url{https://www.owasp.org/index.php/SQL_Injection}}
 }
 @article{McNamee2001,
 	title        = {{Specialization tools and techniques for systematic optimization of system software}},
@@ -941,6 +941,12 @@
 	year         = 2021,
 	url          = {https://upwork.com}
 }
+@misc{fiverr,
+	title        = {Fiverr: The world's largest marketplace for digital services},
+	author       = {Fiverr},
+	year         = 2021,
+	url          = {https://fiverr.com}
+}
 @misc{websitestatistics,
 	title        = {Statistica: How many websites are there?},
 	author       = {Statistica},
@@ -1182,7 +1188,7 @@
 	title        = {Selective symbolic execution},
 	author       = {Chipounov, Vitaly and Georgescu, Vlad and Zamfir, Cristian and Candea, George},
 	year         = 2009,
-	booktitle    = {Proceedings of the 5th Workshop on Hot Topics in System Dependability (HotDep)},
+	booktitle    = {Proceedings of the 5th Workshop on Hot Topics in System Dependability (HotDep)}
 }
 @inproceedings{huang2019uchecker,
 	title        = {UChecker: Automatically detecting php-based unrestricted file upload vulnerabilities},
@@ -1259,8 +1265,8 @@
 	abstract     = {Code reuse attacks have been a threat to software security since the introduction of non-executable memory protections. Despite significant advances in various types of additional defenses, such as control flow integrity (CFI) and leakage-resilient code randomization, recent code reuse attacks have demonstrated that these defenses are often not enough to prevent successful exploitation. Sophisticated exploits can reuse code comprising larger code fragments that conform to the enforced CFI policy and which are not affected by randomization. As a step towards improving our defenses against code reuse attacks, in this paper we present Shredder, a defense-in-depth exploit mitigation tool for the protection of closed-source applications. In a preprocessing phase, Shredder statically analyzes a given application to pinpoint the call sites of potentially useful (to attackers) system API functions, and uses backwards data flow analysis to derive their expected argument values and generate whitelisting policies in a best-effort way. At runtime, using library interposition, Shredder exposes to the protected application only specialized versions of these critical API functions, and blocks any invocation that violates the enforced policy. We have experimentally evaluated our prototype implementation for Windows programs using a large set of 251 shellcode and 30 code reuse samples, and show that it improves significantly upon code stripping, a state-of-the-art code surface reduction technique, by blocking a larger number of malicious payloads with negligible runtime overhead.}
 }
 @article{altestability,
-  title={Testability Tarpits: the Impact of Code Patterns on the Security Testing of Web Applications},
-  author={Al Kassar, Feras and Clerici, Giulia and Compagna, Luca and Yamaguchi, Fabian and Balzarotti, Davide}
+	title        = {Testability Tarpits: the Impact of Code Patterns on the Security Testing of Web Applications},
+	author       = {Al Kassar, Feras and Clerici, Giulia and Compagna, Luca and Yamaguchi, Fabian and Balzarotti, Davide}
 }
 @inproceedings{10.1145/1081706.1081750,
 	title        = {CUTE: A Concolic Unit Testing Engine for C},
@@ -1348,4 +1354,42 @@
 	author       = {Hasan, Md Mehedi and Ghavamnia, Seyedhamed and Polychronakis, Michalis},
 	year         = 2022,
 	booktitle    = {Proceedings of the 25th International Symposium on Research in Attacks, Intrusions and Defenses (RAID)}
+}
+@inbook{Jin2010,
+	title        = {K-Means Clustering},
+	author       = {Jin, Xin and Han, Jiawei},
+	year         = 2010,
+	booktitle    = {Encyclopedia of Machine Learning},
+	publisher    = {Springer US}
+}
+@inproceedings{spectralclustering,
+	title        = {On Spectral Clustering: Analysis and an Algorithm},
+	author       = {Ng, Andrew Y. and Jordan, Michael I. and Weiss, Yair},
+	year         = 2001,
+	booktitle    = {Proceedings of the 14th International Conference on Neural Information Processing Systems: Natural and Synthetic},
+	location     = {Vancouver, British Columbia, Canada},
+	publisher    = {MIT Press},
+	address      = {Cambridge, MA, USA},
+	series       = {NIPS'01},
+	pages        = {849–856},
+	abstract     = {Despite many empirical successes of spectral clustering methods— algorithms that cluster points using eigenvectors of matrices derived from the data—there are several unresolved issues. First. there are a wide variety of algorithms that use the eigenvectors in slightly different ways. Second, many of these algorithms have no proof that they will actually compute a reasonable clustering. In this paper, we present a simple spectral clustering algorithm that can be implemented using a few lines of Matlab. Using tools from matrix perturbation theory, we analyze the algorithm, and give conditions under which it can be expected to do well. We also show surprisingly good experimental results on a number of challenging clustering problems.},
+	numpages     = 8
+}
+@inproceedings{dbscan,
+	title        = {A Density-Based Algorithm for Discovering Clusters in Large Spatial Databases with Noise},
+	author       = {Ester, Martin and Kriegel, Hans-Peter and Sander, J\"{o}rg and Xu, Xiaowei},
+	year         = 1996,
+	booktitle    = {Proceedings of the Second International Conference on Knowledge Discovery and Data Mining},
+	location     = {Portland, Oregon},
+	publisher    = {AAAI Press},
+	series       = {KDD'96},
+	abstract     = {Clustering algorithms are attractive for the task of class identification in spatial databases. However, the application to large spatial databases rises the following requirements for clustering algorithms: minimal requirements of domain knowledge to determine the input parameters, discovery of clusters with arbitrary shape and good efficiency on large databases. The well-known clustering algorithms offer no solution to the combination of these requirements. In this paper, we present the new clustering algorithm DBSCAN relying on a density-based notion of clusters which is designed to discover clusters of arbitrary shape. DBSCAN requires only one input parameter and supports the user in determining an appropriate value for it. We performed an experimental evaluation of the effectiveness and efficiency of DBSCAN using synthetic data and real data of the SEQUOIA 2000 benchmark. The results of our experiments demonstrate that (1) DBSCAN is significantly more effective in discovering clusters of arbitrary shape than the well-known algorithm CLAR-ANS, and that (2) DBSCAN outperforms CLARANS by a factor of more than 100 in terms of efficiency.},
+	keywords     = {clustering algorithms, arbitrary shape of clusters, efficiency on large spatial databases, handling nlj4-275oise}
+}
+@article{bholowalia2014ebk,
+	title        = {EBK-means: A clustering technique based on elbow method and k-means in WSN},
+	author       = {Bholowalia, Purnima and Kumar, Arvind},
+	year         = 2014,
+	journal      = {International Journal of Computer Applications},
+	publisher    = {Citeseer}
 }
