--- a/sections/ad/1_introduction.tex
+++ b/sections/ad/1_introduction.tex
@@ -2,7 +2,7 @@
 
 Web applications and web APIs are the main interface of users with online services. 
 WordPress, the blogging platform written in PHP, single-handedly accounts for over 60 million deployments~\cite{wpstatsbuildwith} and 43\% of all websites~\cite{wpstatsw3techs}. 
-Therefore, protecting these online platforms against harm by proactively identifying security vulnerabilities and integrating attack surface reduction mechanisms offers protection to a large user base. 
+Therefore, protecting these online platforms against harm by proactively identifying security vulnerabilities and integrating attack-surface reduction mechanisms offers protection to a large user base. 
 
 Modern software aims to be flexible by offering support for various features such as authentication APIs (e.g., built-in authentication and oauth), as well as database adapters (e.g., MySQL vs MongoDB). 
 This added flexibility through first party modules and third party dependencies comes at the price of code bloat. 
