--- a/sections/ad/4_evaluation.tex
+++ b/sections/ad/4_evaluation.tex
@@ -124,7 +124,7 @@ These metrics are proxy variables to quantify the security improvements of deblo
 
 \subsubsection*{Logical Lines of Code (LLOC) Reduction} 
 The reduction in the overall size of the code-base of an application has a direct correlation with the number of bugs present in it~\cite{mcconnell2004code}. 
-Based on this intuition, shrinking the size of an application's code-base by removing unnecessary features reduces its attack surface and potential vulnerabilities. 
+Based on this intuition, shrinking the size of an application's code-base by removing unnecessary features reduces its attack-surface and potential vulnerabilities. 
 To measure this, we report the size of applications in our dataset before and after debloating in terms of logical lines of code (LLOC). 
 
 \begin{table}[]
