--- a/sections/ad/6_relatedwork.tex
+++ b/sections/ad/6_relatedwork.tex
@@ -34,5 +34,5 @@ While the goal of \animatedead{} debloating is not to outperform LIM, we demonst
 
 Unlike LIM, \animatedead{} does not rely on an extensive training phase and can perform its analysis offline with virtually \emph{zero} overhead on production execution environments. 
 
-Web applications debloated by \animatedead{} can benefit from the protections offered by other orthogonal attack surface reduction and API specialization schemes such as Saphire~\cite{bulekov2021saphire} and SQLBLock~\cite{jahanshahi2020you} to protect against SQL injection vulnerabilities in the remaining SQL API calls required by users and to confine the web application based on a generated profile of system-calls to limit the potential damage from code execution exploits.
+Web applications debloated by \animatedead{} can benefit from the protections offered by other orthogonal attack-surface reduction and API specialization schemes such as Saphire~\cite{bulekov2021saphire} and SQLBLock~\cite{jahanshahi2020you} to protect against SQL injection vulnerabilities in the remaining SQL API calls required by users and to confine the web application based on a generated profile of system-calls to limit the potential damage from code execution exploits.
 
