--- a/sections/chapter_five_ad.tex
+++ b/sections/chapter_five_ad.tex
@@ -25,7 +25,7 @@ One of the requirements of concolic execution is the instrumentation of the PHP 
 For that purpose, we build a PHP emulator capable of understanding and emulating \emph{all} PHP opcodes with concrete and symbolic inputs. 
 Moreover, we design a distributed execution environment to allow for the parallel exploration of symbolically satisfiable branches. 
 
-In the remainder of this chapter, which is replicated from the paper titled ``AnimateDead: Debloating Web Applications Using Concolic Execution'' which is currently under submission, we describe our design for our PHP concolic emulation system called ``\animatedead{}'', and use this system to debloat web applications and report on the improvement of security metrics as a means to quantifying the attack surface reduction. 
+In the remainder of this chapter, which is replicated from the paper titled ``AnimateDead: Debloating Web Applications Using Concolic Execution'' which is currently under submission, we describe our design for our PHP concolic emulation system called ``\animatedead{}'', and use this system to debloat web applications and report on the improvement of security metrics as a means to quantifying the attack-surface reduction. 
 
 \pagebreak{}
 
