--- a/sections/lim/parts/setup.tex
+++ b/sections/lim/parts/setup.tex
@@ -191,7 +191,7 @@ Modern web applications provide an incredibly wide range of features and
 options to their users. Even though, from a functional perspective, more
 features are desirable, from a security perspective, the code that implements
 new features may contain new vulnerabilities thereby further expanding
-a program's attack surface. In order for a system to be
+a program's attack-surface. In order for a system to be
 able to remove code related to unnecessary features, one must first identify
 which features are necessary for a target set of users.
 
