--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -1,6 +1,6 @@
 Web applications have become an inseparable part of our digital life, and therefore, protecting online users and their information is a critical task. 
 Over the past two decades, defensive measures such as secure software development practices, network protection devices and intrusion detection systems have matured. 
-Among others, attack surface reduction is an important defensive concept, which consists of limiting the entry points to the applications which can be abused by attackers. 
+Among others, attack-surface reduction is an important defensive concept, which consists of limiting the entry points to the applications which can be abused by attackers. 
 Software debloating is one of the concrete approaches for this idea, and its goal is identification and removal of unnecessary code to prevent its abuse and exploitation in future attacks. 
 
 In this dissertation, I present my work on identifying and characterizing code-bloat in web applications, as well as techniques to remove this code-bloat while preserving the functionality of web applications based on the users' needs.
