--- a/sections/chapter_four_dbltr.tex
+++ b/sections/chapter_four_dbltr.tex
@@ -1,4 +1,4 @@
-\chapter{Customized debloating for users with similar feature usage}
+\chapter{Customized debloating for users with similar usage behavior}
 \label{chap:dbltr}
 
 \section*{Preamble}
@@ -12,13 +12,13 @@ To address these challenges, we start by building a real-world ground truth data
 We then train a classifier that incorporates the source code features to identify users with similar usage patterns and group them together under a dynamically-defined role. 
 
 We design and implement \dbltr{} which consists of a reverse-proxy that is capable of hooking into the authentication attempts and transparently routing users towards role-specific custom debloated web applications. 
-Finally, we evaluate the security benefits of this approach and demonstrate its ability to protect web applications against known CVEs and shrink their attack surface further than the Less is More~\cite{azad2019less}. 
+Finally, we evaluate the security benefits of this approach and demonstrate its ability to protect web applications against known CVEs and shrink their attack-surface further than the Less is More~\cite{azad2019less}. 
 The remainder of this chapter is replicated from the paper titled ``Role Models: Role-based debloating for Web Applications'' which is currently under submission. 
 
 \section*{Role Models: Role-based Debloating for Web Applications}
 
 \subsection*{Abstract}
-The process of debloating, i.e., removing unnecessary code and features in software, has become an attractive proposition to managing the ever-expanding attack surface of ever-growing modern applications. Researchers have shown that debloating produces significant security improvements in a variety of application domains including operating systems, libraries, compiled software, and, more recently, web applications. Even though the client/server nature of web applications allows the same backend to serve thousands of users with diverse needs, web applications have been approached monolithically by existing debloating approaches. That is, a feature can be debloated only if none of the users of a web application requires it. Similarly, everyone gets access to the same ``global'' features, whether they need them or not.
+The process of debloating, i.e., removing unnecessary code and features in software, has become an attractive proposition to managing the ever-expanding attack-surface of ever-growing modern applications. Researchers have shown that debloating produces significant security improvements in a variety of application domains including operating systems, libraries, compiled software, and, more recently, web applications. Even though the client/server nature of web applications allows the same backend to serve thousands of users with diverse needs, web applications have been approached monolithically by existing debloating approaches. That is, a feature can be debloated only if none of the users of a web application requires it. Similarly, everyone gets access to the same ``global'' features, whether they need them or not.
 
 Recognizing that different users need access to different features, in this paper we propose role-based debloating for web applications. In this approach, we focus on clustering users with similar usage behavior together and providing them with a custom debloated application that is tailored to their needs. Through a user study with 60 experienced web developers and administrators, we first establish that different users indeed use web applications differently. This data is then used by \dbltr{}, an automated pipeline for providing tailored debloating based on a user's true requirements. Next to debloating web applications, \dbltr{} includes a transparent content-delivery mechanism that routes authenticated users to their debloated copies. 
 We empirically demonstrate that \dbltr{} can be 30-80\% more effective than the state-of-the-art in debloating in removing critical vulnerabilities. 
@@ -27,21 +27,13 @@ We empirically demonstrate that \dbltr{} can be 30-80\% more effective than the 
 \input{sections/dbltr/introduction.tex}
 % Background
 \input{sections/dbltr/background.tex}
-% Experimental Design
-\input{sections/dbltr/experimentaldesign.tex}
-% Implementation
-\input{sections/dbltr/implementation.tex}
+% User Study
+\input{sections/dbltr/userstudy.tex}
+% System Design
+\input{sections/dbltr/systemdesign.tex}
 % Debloating Results
 \input{sections/dbltr/debloatingresults.tex}
 % Discussion
 \input{sections/dbltr/discussion.tex}
-% Related Work
-% \input{sections/dbltr/relatedwork.tex}
 % Conclusion
 \input{sections/dbltr/conclusion.tex}
-%Acknowledgements
-%\input{sections/acknowledgements.tex}
-% Availability
-% \input{sections/dbltr/availability.tex}
-
-% \input{sections/dbltr/appendix.tex}
